# gelsightmini_ros_bundle

./: .gitignore  README.md  gelsightmini_ros_bundle.repos  requirements.txt
data_folder/: CMakeLists.txt  package.xml
data_folder/obj_ply/: gsmini_pointcloud copy.ply  gsmini_pointcloud.ply
gsmini_to_pc/: CMakeLists.txt  package.xml
gsmini_to_pc/config/: 2_finger_ponintcloud.rviz  mini_ros_3d_config.rviz
gsmini_to_pc/launch/: gsmini_to_pc.launch  simulate_1fing_gsmini_to_pc.launch  simulate_2fing_gsmini_to_pc.launch
gsmini_to_pc/scripts/: gsmini_to_pc.py
simulated_gsmini/interactive_object_controller/: CMakeLists.txt  package.xml
simulated_gsmini/interactive_object_controller/config/: object_controller.cfg
simulated_gsmini/interactive_object_controller/include/: interactive_object_controller.hpp
simulated_gsmini/interactive_object_controller/src/: interactive_object_controller.cpp  interactive_object_controller_node.cpp
simulated_gsmini/tactile_image_simulator/: CMakeLists.txt  package.xml
simulated_gsmini/tactile_image_simulator/launch/: generate_images.launch  parallelGripper_tactile_simulator copy.launch  singleContact_tactile_simulator.launch
simulated_gsmini/tactile_image_simulator/scripts/: main.py
simulated_gsmini_to_pc/: CMakeLists.txt  package.xml
simulated_gsmini_to_pc/interactive_object_controller/: CMakeLists.txt
simulated_gsmini_to_pc/interactive_object_controller/config/: object_controller.cfg
simulated_gsmini_to_pc/interactive_object_controller/include/: interactive_object_controller.hpp
simulated_gsmini_to_pc/interactive_object_controller/src/: interactive_object_controller.cpp
simulated_gsmini_to_pc/launch/: simulated_gsmini.launch
simulated_gsmini_to_pc/pc_visualizer/: CMakeLists.txt  package.xml
simulated_gsmini_to_pc/pc_visualizer/config/: debug_visualizer.rviz
simulated_gsmini_to_pc/pc_visualizer/include/: pc_visualizer.hpp
simulated_gsmini_to_pc/pc_visualizer/launch/: pc_visualizer.launch
simulated_gsmini_to_pc/pc_visualizer/src/: pc_visualizer.cpp  pc_visualizer_node.cpp
simulated_gsmini_to_pc/results/: _gsmini_height.npy
simulated_gsmini_to_pc/scripts/: main.py
simulated_gsmini_to_pc/simulate_two_fingers_tactile/: CMakeLists.txt  package.xml
simulated_gsmini_to_pc/simulate_two_fingers_tactile/launch/: simulated_gsmini.launch
simulated_gsmini_to_pc/simulate_two_fingers_tactile/results/: _gsmini_height.npy
simulated_gsmini_to_pc/simulate_two_fingers_tactile/scripts/: main.py
simulated_gsmini_to_pc/tactile_image_simulator/: CMakeLists.txt  package.xml
simulated_gsmini_to_pc/tactile_image_simulator/config/: ParallelGripper_tactile_simulator.rviz  SingleContact_tactile_simulator.rviz  generate_contact_visualizer.rviz
simulated_gsmini_to_pc/tactile_image_simulator/launch/: choose_simulated_contact.launch  parallelGripper_tactile_simulator.launch  singleContact_tactile_simulator.launch
simulated_gsmini_to_pc/tactile_image_simulator/scripts/: main.py
simulated_gsmini_to_pc/taxim_pointcloud_preparator/: CMakeLists.txt  package.xml
simulated_gsmini_to_pc/taxim_pointcloud_preparator/config/: debug_visualizer.rviz
simulated_gsmini_to_pc/taxim_pointcloud_preparator/include/: taxim_pointcloud_preparator.hpp
simulated_gsmini_to_pc/taxim_pointcloud_preparator/src/: taxim_pointcloud_preparator.cpp  taxim_pointcloud_preparator_node.cpp
simulated_gsmini_to_pc/taxim_pointcloud_preparator/srv/: SavePointcloud.srv
